101-kittens-carousel-static-website-ec2/cfn.yml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  This CloudFormation Template was written for running Kittens Carousel Static Website on EC2. 
  Kittens Carousel Static Website will be deployed on Amazon Linux 2023 EC2 Instance with custom 
  security group which allows http connections on port 80 and ssh port 22 from anywhere. Kittens Carousel Static Website
  is downloaded from my Public Github repository, then deployed on Apache Web Server.

Resources: 
  myWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0150ccaf51ab55a51
      InstanceType: t3.small
      KeyName: firstkey
      SecurityGroupIds: 
        - "String"!Ref mySecGrp
      Tags: 
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: "String"
      UserData: 
        Fn::Base64: |
          #!/bin/bash
          dnf update -y
          dnf install httpd -y
          systemctl start httpd
          systemctl enable httpd
          cd /var/www/html
          FOLDER="https://raw.githubusercontent.com/ilhanB/aws-projects-2025/refs/heads/main/101-kittens-carousel-static-website-ec2/static-web"
          wget ${FOLDER}/index.html
          wget ${FOLDER}/cat0.jpg
          wget ${FOLDER}/cat1.jpg
          wget ${FOLDER}/cat2.jpg

  mySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "allow ssh and http" # Required
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
       Tags: 
         - Key: "Name"
           Value: "kittens"
         - Key: "cohort"
           Value: "19"      

Outputs:
  webSiteURL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Kittens Carousel Application URL
